Подключает контентные изображения на страницу каталога

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <body>
         <header class="page-header">
             <a class="page-header-link" href="index.html">
-                <img class="page-header-logo" src="" alt="Логотип интернет-магазина «Девайс»">
+                <img class="page-header-logo" src="./images/header/header-logo.svg" width="145" height="36" alt="Логотип интернет-магазина «Девайс»">
             </a>
 			<form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
 				<label>
@@ -163,28 +163,28 @@
                 <ul class="product-card-list">
                     <li class="product-card-item">
                         <a class="product-card-link" href="#">
-                            <img class="product-card-image" src="" alt="">
+                            <img class="product-card-image" src="./images/catalog/catalog-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
                             <h3 class="product-card-title">Любительская селфи-палка</h3>
                             <p class="product-card-price">500 ₽</p>
                         </a>
                     </li>
                     <li class="product-card-item">
                         <a class="product-card-link" href="#">
-                            <img class="product-card-image" src="" alt="">
+                            <img class="product-card-image" src="./images/catalog/catalog-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
                             <h3 class="product-card-title">Профессиональная селфи-палка</h3>
                             <p class="product-card-price">1 500 ₽</p>
                         </a>
                     </li>
                     <li class="product-card-item">
                         <a class="product-card-link" href="#">
-                            <img class="product-card-image" src="" alt="">
+                            <img class="product-card-image" src="./images/catalog/catalog-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
                             <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
                             <p class="product-card-price">2 500 ₽</p>
                         </a>
                     </li>
                     <li class="product-card-item">
                         <a class="product-card-link" href="#">
-                            <img class="product-card-image" src="" alt="">
+                            <img class="product-card-image" src="./images/catalog/catalog-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
                             <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
                             <p class="product-card-price">1 500 ₽</p>
                         </a>
@@ -226,7 +226,7 @@
 			<section class="footer-contacts">
 				<h2 class="visually-hidden">Наши контакты</h2>
                 <a class="page-header-link">
-                    <img class="page-header-logo" src="" alt="Логотип интернет-магазина «Девайс»">
+                    <img class="page-header-logo" src="./images/footer/footer-logo.svg" width="145" height="36" alt="Логотип интернет-магазина «Девайс»">
                 </a>
 				<p class="footer-contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
 			</section>
@@ -269,6 +269,7 @@
 			<section class="footer-htmlacademy">
 				<h2 class="visually-hidden">Сделано в HTML Academy</h2>
 				<a href="https://htmlacademy.ru/">
+                    <img src="./images/footer/html-academy-logo.svg" width="115" height="33" alt="Логотип HTML Academy">
 					<span class="visually-hidden">.html academy</span>
 				</a>
 			</section>
