--- a/catalog.html
+++ b/catalog.html
@@ -225,7 +225,7 @@
         <footer class="page-footer">
 			<section class="footer-contacts">
 				<h2 class="visually-hidden">Наши контакты</h2>
-                <a class="page-header-link">
+                <a class="page-header-link" href="index.html">
                     <img class="page-header-logo" src="./images/footer/footer-logo.svg" width="145" height="36" alt="Логотип интернет-магазина «Девайс»">
                 </a>
 				<p class="footer-contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
