--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             </dd>
 						</dl>
 					</li>
-					<li class="slider-products-item">
+					<li class="slider-products-item slider-disabled">
 						<h3 class="visually-hidden">Смарт часы</h3>
 						<img class="slider-products-image" src="./images/main/slider-2.png" width="560" height="560" alt="Смарт часы">
 						<button class="slider-button slider-prev" type="button">
@@ -147,7 +147,7 @@
                             </dd>
 						</dl>
 					</li>
-					<li class="slider-products-item">
+					<li class="slider-products-item slider-disabled">
 						<h3 class="visually-hidden">Палка для селфи</h3>
 						<img class="slider-products-image" src="./images/main/slider-3.png" width="560" height="560" alt="Палка для селфи">
 						<button class="slider-button slider-prev" type="button">
