--- a/catalog.html
+++ b/catalog.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
+
     <head>
         <meta charset="utf-8">
         <title>HTML Academy: Девайс Каталог</title>
+        <link rel="stylesheet" href="./styles/styles.css">
     </head>
 
     <body>
@@ -10,12 +12,12 @@
             <a class="page-header-link" href="index.html">
                 <img class="page-header-logo" src="./images/header/header-logo.svg" width="145" height="36" alt="Логотип интернет-магазина «Девайс»">
             </a>
-			<form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
-				<label>
-					<input class="search-field" type="text" name="search" value="Текст поиска">
-				</label>
-				<button class="page-header-button button" type="button">Найти</button>
-			</form>
+            <form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
+                <label>
+                    <input class="search-field" type="text" name="search" value="Текст поиска">
+                </label>
+                <button class="page-header-button button" type="button">Найти</button>
+            </form>
             <nav class="navigation">
                 <ul class="navigation-list navigation-user">
                     <li class="navigation-item">
@@ -38,19 +40,19 @@
                             <li class="navigation-item navigation-catalog-item">
                                 <a class="navigation-link" href="#">Виртуальная реальность</a>
                             </li>
-							<li class="navigation-item navigation-catalog-item">
+                            <li class="navigation-item navigation-catalog-item">
                                 <a class="navigation-link" href="catalog.html">Моноподы для cелфи</a>
                             </li>
-							<li class="navigation-item navigation-catalog-item">
+                            <li class="navigation-item navigation-catalog-item">
                                 <a class="navigation-link" href="#">Экшн-камеры</a>
                             </li>
-							<li class="navigation-item navigation-catalog-item">
+                            <li class="navigation-item navigation-catalog-item">
                                 <a class="navigation-link" href="#">Фитнес-браслеты</a>
                             </li>
-							<li class="navigation-item navigation-catalog-item">
+                            <li class="navigation-item navigation-catalog-item">
                                 <a class="navigation-link" href="#">Умные часы</a>
                             </li>
-							<li class="navigation-item navigation-catalog-item">
+                            <li class="navigation-item navigation-catalog-item">
                                 <a class="navigation-link" href="#">Квадрокоптеры</a>
                             </li>
                         </ul>
@@ -84,65 +86,65 @@
                 </ol>
             </header>
 
-			<section class="catalog-products">
-				<h2 class="visually-hidden">Список товаров с фильтрами</h2>
+            <section class="catalog-products">
+                <h2 class="visually-hidden">Список товаров с фильтрами</h2>
 
-				<form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
-					<fieldset class="catalog-filter-group">
-						<legend class="catalog-filter-title">Цвет</legend>
-						<ul class="catalog-filter-list">
-							<li class="catalog-filter-item">
-								<label class="control">
-									<input class="control-input" type="checkbox" name="black" checked>
-									Черный
-								</label>
-							</li>
-							<li class="catalog-filter-item">
-								<label class="control">
-									<input class="control-input" type="checkbox" name="white" checked>
-									Белый
-								</label>
-							</li>
-							<li class="catalog-filter-item">
-								<label class="control">
-									<input class="control-input" type="checkbox" name="blue">
-									Синий
-								</label>
-							</li>
-							<li class="catalog-filter-item">
-								<label class="control">
-									<input class="control-input" type="checkbox" name="red">
-									Красный
-								</label>
-							</li>
-							<li class="catalog-filter-item">
-								<label class="control">
-									<input class="control-input" type="checkbox" name="pink">
-									Розовый
-								</label>
-							</li>
-						</ul>
-					</fieldset>
+                <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+                    <fieldset class="catalog-filter-group">
+                        <legend class="catalog-filter-title">Цвет</legend>
+                        <ul class="catalog-filter-list">
+                            <li class="catalog-filter-item">
+                                <label class="control">
+                                    <input class="control-input" type="checkbox" name="black" checked>
+                                    Черный
+                                </label>
+                            </li>
+                            <li class="catalog-filter-item">
+                                <label class="control">
+                                    <input class="control-input" type="checkbox" name="white" checked>
+                                    Белый
+                                </label>
+                            </li>
+                            <li class="catalog-filter-item">
+                                <label class="control">
+                                    <input class="control-input" type="checkbox" name="blue">
+                                    Синий
+                                </label>
+                            </li>
+                            <li class="catalog-filter-item">
+                                <label class="control">
+                                    <input class="control-input" type="checkbox" name="red">
+                                    Красный
+                                </label>
+                            </li>
+                            <li class="catalog-filter-item">
+                                <label class="control">
+                                    <input class="control-input" type="checkbox" name="pink">
+                                    Розовый
+                                </label>
+                            </li>
+                        </ul>
+                    </fieldset>
 
-					<fieldset class="catalog-filter-group">
-						<legend class="catalog-filter-title">Bluetooth</legend>
-						<ul class="catalog-filter-list">
-							<li class="catalog-filter-item">
-								<label class="control">
-									<input class="control-input" type="radio" name="bluetooth" value="yes" checked>
-									Есть
-								</label>
-							</li>
-							<li class="catalog-filter-item">
-								<label class="control">
-									<input class="control-input" type="radio" name="bluetooth" value="no">
-									Нет
-								</label>
-							</li>
-						</ul>
-					</fieldset>
+                    <fieldset class="catalog-filter-group">
+                        <legend class="catalog-filter-title">Bluetooth</legend>
+                        <ul class="catalog-filter-list">
+                            <li class="catalog-filter-item">
+                                <label class="control">
+                                    <input class="control-input" type="radio" name="bluetooth" value="yes" checked>
+                                    Есть
+                                </label>
+                            </li>
+                            <li class="catalog-filter-item">
+                                <label class="control">
+                                    <input class="control-input" type="radio" name="bluetooth" value="no">
+                                    Нет
+                                </label>
+                            </li>
+                        </ul>
+                    </fieldset>
 
-					<button class="catalog-products-button button" type="submit">Показать</button>
+                    <button class="catalog-products-button button" type="submit">Показать</button>
 
                     <p>сортировка:</p>
                     <select class="select-control" name="sorting">
@@ -150,7 +152,6 @@
                         <option value="cheap">Дешевые</option>
                         <option value="expensive">Дорогие</option>
                     </select>
-
 
                     <a class="button" href="#">
                         <span class="visually-hidden">По возрастанию</span>
@@ -219,22 +220,22 @@
                         </a>
                     </li>
                 </ul>
-			</section>
+            </section>
         </main>
 
         <footer class="page-footer">
-			<section class="footer-contacts">
-				<h2 class="visually-hidden">Наши контакты</h2>
+            <section class="footer-contacts">
+                <h2 class="visually-hidden">Наши контакты</h2>
                 <a class="page-header-link" href="index.html">
                     <img class="page-header-logo" src="./images/footer/footer-logo.svg" width="145" height="36" alt="Логотип интернет-магазина «Девайс»">
                 </a>
-				<p class="footer-contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-			</section>
+                <p class="footer-contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+            </section>
 
-			<section class="footer-navigation">
-				<h2 class="visually-hidden">Навигация</h2>
-				<ul class="footer-navigation-list">
-					<li class="footer-navigation-item">
+            <section class="footer-navigation">
+                <h2 class="visually-hidden">Навигация</h2>
+                <ul class="footer-navigation-list">
+                    <li class="footer-navigation-item">
                         <a class="footer-navigation-link" href="#">Доставка</a>
                     </li>
                     <li class="footer-navigation-item">
@@ -243,13 +244,13 @@
                     <li class="footer-navigation-item">
                         <a class="footer-navigation-link" href="#">Контакты</a>
                     </li>
-				</ul>
-			</section>
+                </ul>
+            </section>
 
-			<section class="footer-social">
-				<h2 class="visually-hidden">Мы в социальных сетях</h2>
-				<ul class="footer-social-list">
-					<li class="footer-social-item">
+            <section class="footer-social">
+                <h2 class="visually-hidden">Мы в социальных сетях</h2>
+                <ul class="footer-social-list">
+                    <li class="footer-social-item">
                         <a class="footer-social-link button" href="#">Telegram</a>
                     </li>
                     <li class="footer-social-item">
@@ -258,21 +259,21 @@
                     <li class="footer-social-item">
                         <a class="footer-social-link button" href="#">Twitter</a>
                     </li>
-				</ul>
-			</section>
+                </ul>
+            </section>
 
-			<section class="footer-phone">
-				<h2 class="visually-hidden">Наш телефон</h2>
-				<a class="footer-phone-number" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
-			</section>
+            <section class="footer-phone">
+                <h2 class="visually-hidden">Наш телефон</h2>
+                <a class="footer-phone-number" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
+            </section>
 
-			<section class="footer-htmlacademy">
-				<h2 class="visually-hidden">Сделано в HTML Academy</h2>
-				<a href="https://htmlacademy.ru/">
+            <section class="footer-htmlacademy">
+                <h2 class="visually-hidden">Сделано в HTML Academy</h2>
+                <a href="https://htmlacademy.ru/">
                     <img src="./images/footer/html-academy-logo.svg" width="115" height="33" alt="Логотип HTML Academy">
-					<span class="visually-hidden">.html academy</span>
-				</a>
-			</section>
-		</footer>
+                    <span class="visually-hidden">.html academy</span>
+                </a>
+            </section>
+        </footer>
     </body>
 </html>
