--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <label>
                     <input class="search-field" type="text" name="search" value="Текст поиска">
                 </label>
-                <button class="page-header-button button" type="button">Найти</button>
+                <button class="page-header-button search-button button" type="button">Найти</button>
             </form>
             <nav class="navigation">
                 <ul class="navigation-list navigation-user">
@@ -30,7 +30,7 @@
                         <a class="navigation-link" href="#">Корзина</a>
                     </li>
                 </ul>
-                <ul class="navigation-list">
+                <ul class="navigation-list navigation-shop">
                     <li class="navigation-item">
                         <a class="navigation-link button" href="#">Каталог товаров +</a>
                         <ul class="navigation-list navigation-catalog-list">
