Добавляет стилизацию слайдера

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <button class="slider-button slider-next" type="button">
                             <span class="visually-hidden">Следующий слайд</span>
                         </button>
-                        <p>Порхает как бабочка, <br>жалит как пчела!</p>
+                        <p class="slider-slogan">Порхает как бабочка, <br>жалит как пчела!</p>
                         <p>Этот обычный, на первый взгляд, квадрокоптер оснащен <br>мощным лазером, замаскированным под стандартную камеру.</p>
                         <a class="slider-product-link button" href="#">Подробнее</a>
                         <ol class="slider-pagination">
@@ -104,13 +104,9 @@
                         </ol>
                         <dl class="slider-product-characteristics">
                             <dt class="slider-product-characteristic">Дальность полета</dt>
-                            <dd class="slider-product-value">
-                                <b>800 м</b>
-                            </dd>
+                            <dd class="slider-product-value">800 м</dd>
                             <dt class="slider-product-characteristic">Радиус поражения</dt>
-                            <dd class="slider-product-value">
-                                <b>50 м</b>
-                            </dd>
+                            <dd class="slider-product-value">50 м</dd>
                         </dl>
                     </li>
                     <li class="slider-products-item slider-disabled">
@@ -122,7 +118,7 @@
                         <button class="slider-button slider-next" type="button">
                             <span class="visually-hidden">Следующий слайд</span>
                         </button>
-                        <p>Худеем <br>правильно!</p>
+                        <p class="slider-slogan">Худеем <br>правильно!</p>
                         <p>Мотивирующие фитнес-браслеты помогут найти в себе силы <br>не пропускать занятия и соблюдать диету.</p>
                         <a class="slider-product-link button" href="#">Подробнее</a>
                         <ol class="slider-pagination">
@@ -144,9 +140,7 @@
                         </ol>
                         <dl class="slider-product-characteristics">
                             <dt class="slider-product-characteristic">Без подзарядки</dt>
-                            <dd class="slider-product-value">
-                                <b>48 часов</b>
-                            </dd>
+                            <dd class="slider-product-value">48 часов</dd>
                         </dl>
                     </li>
                     <li class="slider-products-item slider-disabled">
@@ -158,7 +152,7 @@
                         <button class="slider-button slider-next" type="button">
                             <span class="visually-hidden">Следующий слайд</span>
                         </button>
-                        <p>Делай селфи, <br>как Бен Стиллер!</p>
+                        <p class="slider-slogan">Делай селфи, <br>как Бен Стиллер!</p>
                         <p>Самая длинная палка для селфи доступна в нашем магазине. <br>Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
                         <a class="slider-product-link button" href="#">Подробнее</a>
                         <ol class="slider-pagination">
@@ -180,17 +174,11 @@
                         </ol>
                         <dl class="slider-product-characteristics">
                             <dt class="slider-product-characteristic">Длина палки</dt>
-                            <dd class="slider-product-value">
-                                <b>8,5 м</b>
-                            </dd>
+                            <dd class="slider-product-value">8,5 м</b></dd>
                             <dt class="slider-product-characteristic">Вес палки</dt>
-                            <dd class="slider-product-value">
-                                <b>5 кг</b>
-                            </dd>
+                            <dd class="slider-product-value">5 кг</b></dd>
                             <dt class="slider-product-characteristic">Материал</dt>
-                            <dd class="slider-product-value">
-                                <b>Карбон</b>
-                            </dd>
+                            <dd class="slider-product-value">Карбон</dd>
                         </dl>
                     </li>
                 </ol>
