Добавляет стилизацию кнопок, блока категорий товаров и блока преимуществ

--- a/index.html
+++ b/index.html
@@ -187,24 +187,12 @@
             <section class="categories">
                 <h2 class="visually-hidden">Категории товаров</h2>
                 <ul class="categories-list">
-                    <li class="categories-item">
-                        <b>Виртуальная реальность</b>
-                    </li>
-                    <li class="categories-item">
-                        <b>Моноподы для селфи</b>
-                    </li>
-                    <li class="categories-item">
-                        <b>Экшн-камеры</b>
-                    </li>
-                    <li class="categories-item">
-                        <b>Фитнес-браслеты</b>
-                    </li>
-                    <li class="categories-item">
-                        <b>Умные часы</b>
-                    </li>
-                    <li class="categories-item">
-                        <b>Квадрокоптеры</b>
-                    </li>
+                    <li class="categories-item categories-item-1">Виртуальная реальность</li>
+                    <li class="categories-item categories-item-2">Моноподы для селфи</li>
+                    <li class="categories-item categories-item-3">Экшн-камеры</li>
+                    <li class="categories-item categories-item-4">Фитнес-браслеты</li>
+                    <li class="categories-item categories-item-5">Умные часы</li>
+                    <li class="categories-item categories-item-6">Квадрокоптеры</li>
                 </ul>
             </section>
 
