--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             </section>
 
             <section class="delivery-to-order">
-                <h2 class="visually-hidden">Доставим редкий товар под заказ</h2>
+                <h2 class="visually-hidden">Доставка редких товаров под заказ</h2>
                 <button class="delivery-to-order-button button" type="button">Доставим редкий товар под заказ</button>
             </section>
 
