--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <h2 class="visually-hidden">Преимущества</h2>
                 <ul class="advantages-list">
                     <li class="advantages-item">
-                        <h3 class="advantages-title">Доставка</h3>
+                        <h3 class="advantages-title title">Доставка</h3>
                         <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж</p>
                         <ol class="advantages-buttons-list">
                             <li class="advantages-buttons-item">
@@ -215,7 +215,7 @@
                         </ol>
                     </li>
                     <li class="propeties-item">
-                        <h3 class="advantages-title">Гарантия</h3>
+                        <h3 class="advantages-title title">Гарантия</h3>
                         <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
                         <ol class="advantages-buttons-list">
                             <li class="advantages-buttons-item">
@@ -230,7 +230,7 @@
                         </ol>
                     </li>
                     <li class="propeties-item">
-                        <h3 class="advantages-title">Кредит</h3>
+                        <h3 class="advantages-title title">Кредит</h3>
                         <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
                         <ol class="advantages-buttons-list">
                             <li class="advantages-buttons-item">
@@ -248,12 +248,12 @@
             </section>
 
             <section class="delivery-to-order">
-                <h2 class="visually-hidden">Доставка редких товаров под заказ</h2>
+                <h2 class="visually-hidden">Редкие товары под заказ</h2>
                 <button class="delivery-to-order-button button" type="button">Доставим редкий товар под заказ</button>
             </section>
 
             <section class="about-us">
-                <h2 class="about-us-title">О нас</h2>
+                <h2 class="about-us-title title">О нас</h2>
                 <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
                 <p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
                 <ul class="delivery-company-list">
@@ -271,11 +271,11 @@
             </section>
 
             <section class="contacts">
-                <h2 class="contacts-title">Контакты</h2>
+                <h2 class="contacts-title title">Контакты</h2>
                 <p>Вы можете забрать товар сами, заехав в наш офис. Заодно сможете проверить работоспособность покупки.</p>
                 <h3 class="contacts-title">Интернет-магазин «Девайс»</h3>
                 <address class="contacts-adress">
-                    <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+                    <p class="contacts-address-place">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
                     <a class="contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
                 </address>
                 <h3 class="contacts-title">Время работы</h3>
@@ -287,7 +287,7 @@
             </section>
 
             <section class="subscribe">
-                <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+                <h2 class="subscribe-title title">Подпишитесь на рассылку</h2>
                 <p>Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
                 <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
                     <label class="visually-hidden" for="subscribe-email">Ваш e-mail</label>
