Добавляет стилизацию блока подписки

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     <input class="subscribe-email-field" id="subscribe-email" type="email" name="subscribe-email" placeholder="Ваш e-mail" required>
                     <button class="subscribe-button button" type="button">Подписаться</button>
                 </form>
-                <p>Это бесплатно</p>
+                <p class="subscribe-its-free">Это бесплатно</p>
             </section>
         </main>
 
