--- a/index.html
+++ b/index.html
@@ -311,13 +311,13 @@
                 <h2 class="visually-hidden">Навигация</h2>
                 <ul class="footer-navigation-list">
                     <li class="footer-navigation-item">
-                        <a class="footer-navigation-link" href="#">Доставка</a>
+                        <a class="footer-navigation-link button" href="#">Доставка</a>
                     </li>
                     <li class="footer-navigation-item">
-                        <a class="footer-navigation-link" href="#">Гарантия</a>
+                        <a class="footer-navigation-link button" href="#">Гарантия</a>
                     </li>
                     <li class="footer-navigation-item">
-                        <a class="footer-navigation-link" href="#">Контакты</a>
+                        <a class="footer-navigation-link button" href="#">Контакты</a>
                     </li>
                 </ul>
             </section>
@@ -326,13 +326,13 @@
                 <h2 class="visually-hidden">Мы в социальных сетях</h2>
                 <ul class="footer-social-list">
                     <li class="footer-social-item">
-                        <a class="footer-social-link button" href="#">Telegram</a>
+                        <a class="footer-social-link visually-hidden" href="#">Telegram</a>
                     </li>
                     <li class="footer-social-item">
-                        <a class="footer-social-link button" href="#">YouTube</a>
+                        <a class="footer-social-link visually-hidden" href="#">YouTube</a>
                     </li>
                     <li class="footer-social-item">
-                        <a class="footer-social-link button" href="#">Twitter</a>
+                        <a class="footer-social-link visually-hidden" href="#">Twitter</a>
                     </li>
                 </ul>
             </section>
