--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </ul>
                 <ul class="navigation-list navigation-shop">
                     <li class="navigation-item">
-                        <a class="navigation-link button" href="#">Каталог товаров +</a>
+                        <a class="navigation-link button" href="#">Каталог товаров</a>
                         <ul class="navigation-list navigation-catalog-list">
                             <li class="navigation-item navigation-catalog-item">
                                 <a class="navigation-link" href="#">Виртуальная реальность</a>
@@ -55,13 +55,13 @@
                         </ul>
                     </li>
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">Доставка</a>
+                        <a class="navigation-link button" href="#">Доставка</a>
                     </li>
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">Гарантия</a>
+                        <a class="navigation-link button" href="#">Гарантия</a>
                     </li>
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">Контакты</a>
+                        <a class="navigation-link button" href="#">Контакты</a>
                     </li>
                 </ul>
             </nav>
