Вносит правки в страницу каталога

--- a/catalog.html
+++ b/catalog.html
@@ -41,7 +41,7 @@
                                 <a class="navigation-link" href="#">Виртуальная реальность</a>
                             </li>
                             <li class="navigation-item navigation-catalog-item">
-                                <a class="navigation-link" href="catalog.html">Моноподы для cелфи</a>
+                                <a class="navigation-link">Моноподы для cелфи</a>
                             </li>
                             <li class="navigation-item navigation-catalog-item">
                                 <a class="navigation-link" href="#">Экшн-камеры</a>
@@ -58,13 +58,13 @@
                         </ul>
                     </li>
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">Доставка</a>
+                        <a class="navigation-link button" href="#">Доставка</a>
                     </li>
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">Гарантия</a>
+                        <a class="navigation-link button" href="#">Гарантия</a>
                     </li>
                     <li class="navigation-item">
-                        <a class="navigation-link" href="#">Контакты</a>
+                        <a class="navigation-link button" href="#">Контакты</a>
                     </li>
                 </ul>
             </nav>
@@ -236,13 +236,13 @@
                 <h2 class="visually-hidden">Навигация</h2>
                 <ul class="footer-navigation-list">
                     <li class="footer-navigation-item">
-                        <a class="footer-navigation-link" href="#">Доставка</a>
+                        <a class="footer-navigation-link button" href="#">Доставка</a>
                     </li>
                     <li class="footer-navigation-item">
-                        <a class="footer-navigation-link" href="#">Гарантия</a>
+                        <a class="footer-navigation-link button" href="#">Гарантия</a>
                     </li>
                     <li class="footer-navigation-item">
-                        <a class="footer-navigation-link" href="#">Контакты</a>
+                        <a class="footer-navigation-link button" href="#">Контакты</a>
                     </li>
                 </ul>
             </section>
@@ -251,13 +251,13 @@
                 <h2 class="visually-hidden">Мы в социальных сетях</h2>
                 <ul class="footer-social-list">
                     <li class="footer-social-item">
-                        <a class="footer-social-link button" href="#">Telegram</a>
+                        <a class="footer-social-link visually-hidden" href="#">Telegram</a>
                     </li>
                     <li class="footer-social-item">
-                        <a class="footer-social-link button" href="#">YouTube</a>
+                        <a class="footer-social-link visually-hidden" href="#">YouTube</a>
                     </li>
                     <li class="footer-social-item">
-                        <a class="footer-social-link button" href="#">Twitter</a>
+                        <a class="footer-social-link visually-hidden" href="#">Twitter</a>
                     </li>
                 </ul>
             </section>
