Добавляет стилизацию хлебных крошек и изображение стрелки

--- a/catalog.html
+++ b/catalog.html
@@ -72,7 +72,7 @@
 
         <main class="catalog-main">
             <header class="catalog-header">
-                <h1 class="catalog-header-title">Моноподы для селфи</h1>
+                <h1 class="catalog-header-title title">Моноподы для селфи</h1>
                 <ol class="breadcrumbs-list">
                     <li class="breadcrumbs-item">
                         <a class="breadcrumbs-link" href="index.html">Главная</a>
