--- a/catalog.html
+++ b/catalog.html
@@ -193,34 +193,30 @@
                     </li>
                 </ul>
 
-                <button class="load-more button" type="button">Загрузить ещё</button>
-                <ul class="pagination">
+                <button class="load-more-button button" type="button">Загрузить ещё</button>
+                <ol class="pagination">
                     <li class="pagination-item">
-                        <a class="pagination-link pagination-back">
-                            <b>Назад</b>
-                        </a>
+                        <a class="pagination-link pagination-back button">Назад</a>
                     </li>
                     <li class="pagination-item">
-                        <a class="pagination-link pagination-link-current">1</a>
+                        <a class="pagination-link pagination-link-page pagination-link-current">1</a>
                     </li>
                     <li class="pagination-item">
-                        <a class="pagination-link" href="#">2</a>
+                        <a class="pagination-link pagination-link-page" href="#">2</a>
                     </li>
                     <li class="pagination-item">
-                        <a class="pagination-link" href="#">3</a>
+                        <a class="pagination-link pagination-link-page" href="#">3</a>
                     </li>
                     <li class="pagination-item">
-                        <a class="pagination-link">...</a>
+                        <a class="pagination-link pagination-link-page">...</a>
                     </li>
                     <li class="pagination-item">
-                        <a class="pagination-link" href="#">15</a>
+                        <a class="pagination-link pagination-link-page" href="#">15</a>
                     </li>
                     <li class="pagination-item">
-                        <a class="pagination-link pagination-forward" href="#">
-                            <b>Вперёд</b>
-                        </a>
+                        <a class="pagination-link pagination-forward button" href="#">Вперёд</a>
                     </li>
-                </ul>
+                </ol>
             </section>
         </main>
 
