--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <a class="page-header-link">
                 <img class="page-header-logo" src="./images/header/header-logo.svg" width="145" height="36" alt="Логотип интернет-магазина «Девайс»">
             </a>
-            <form class="search-form" action="https://echo.htmlacademy.ru/" method="get">
+            <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
                 <label>
                     <input class="search-field" type="text" name="search" value="Текст поиска">
                 </label>
-                <button class="page-header-button search-button button" type="button">Найти</button>
+                <button class="page-header-button search-button button" type="submit">Найти</button>
             </form>
             <nav class="navigation">
                 <ul class="navigation-list navigation-user">
