Добавляет мета-теги

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
     <head>
         <meta charset="utf-8">
-        <title>HTML Academy: Девайс</title>
+        <title>Интернет-магазин «Девайс»</title>
         <link rel="stylesheet" href="./styles/styles.css">
         <link rel="icon" href="./images/favicon/favicon.ico">
+        <meta name="keywords" content="Интернет-магазин, «Девайс», гаджеты, квадрокоптеры, моноподы для селфи, смарт-часы, виртуальная реальность, фитнес-браслеты, экшн-камеры">
+        <meta name="description" content="Интернет-магазин «Девайс»">
     </head>
 
     <body>
