--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <a class="slider-product-link button" href="#">Подробнее</a>
                         <ol class="slider-pagination">
                             <li class="slider-pagination-item">
-                                <button class="slider-pagination-button-current" type="button">
+                                <button class="slider-pagination-button slider-pagination-button-current" type="button">
                                     <span class="visually-hidden">Слайд 1</span>
                                 </button>
                             </li>
@@ -124,23 +124,6 @@
                         <p class="slider-slogan">Худеем <br>правильно!</p>
                         <p>Мотивирующие фитнес-браслеты помогут найти в себе силы <br>не пропускать занятия и соблюдать диету.</p>
                         <a class="slider-product-link button" href="#">Подробнее</a>
-                        <ol class="slider-pagination">
-                            <li class="slider-pagination-item">
-                                <button class="slider-pagination-button" type="button">
-                                    <span class="visually-hidden">Слайд 1</span>
-                                </button>
-                            </li>
-                            <li class="slider-pagination-item">
-                                <button class="slider-pagination-button-current" type="button">
-                                    <span class="visually-hidden">Слайд 2</span>
-                                </button>
-                            </li>
-                            <li class="slider-pagination-item">
-                                <button class="slider-pagination-button" type="button">
-                                    <span class="visually-hidden">Слайд 3</span>
-                                </button>
-                            </li>
-                        </ol>
                         <dl class="slider-product-characteristics">
                             <dt class="slider-product-characteristic">Без подзарядки</dt>
                             <dd class="slider-product-value">48 часов</dd>
@@ -158,23 +141,6 @@
                         <p class="slider-slogan">Делай селфи, <br>как Бен Стиллер!</p>
                         <p>Самая длинная палка для селфи доступна в нашем магазине. <br>Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
                         <a class="slider-product-link button" href="#">Подробнее</a>
-                        <ol class="slider-pagination">
-                            <li class="slider-pagination-item">
-                                <button class="slider-pagination-button" type="button">
-                                    <span class="visually-hidden">Слайд 1</span>
-                                </button>
-                            </li>
-                            <li class="slider-pagination-item">
-                                <button class="slider-pagination-button" type="button">
-                                    <span class="visually-hidden">Слайд 2</span>
-                                </button>
-                            </li>
-                            <li class="slider-pagination-item">
-                                <button class="slider-pagination-button-current" type="button">
-                                    <span class="visually-hidden">Слайд 3</span>
-                                </button>
-                            </li>
-                        </ol>
                         <dl class="slider-product-characteristics">
                             <dt class="slider-product-characteristic">Длина палки</dt>
                             <dd class="slider-product-value">8,5 м</b></dd>
@@ -220,32 +186,10 @@
                     <li class="propeties-item">
                         <h3 class="advantages-title title">Гарантия</h3>
                         <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
-                        <ol class="advantages-buttons-list">
-                            <li class="advantages-buttons-item">
-                                <button class="advantages-button button" type="button">Доставка</button>
-                            </li>
-                            <li class="advantages-buttons-item">
-                                <button class="advantages-button advantages-button-current button" type="button">Гарантия</button>
-                            </li>
-                            <li class="advantages-buttons-item">
-                                <button class="advantages-button button" type="button">Кредит</button>
-                            </li>
-                        </ol>
                     </li>
                     <li class="propeties-item">
                         <h3 class="advantages-title title">Кредит</h3>
                         <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
-                        <ol class="advantages-buttons-list">
-                            <li class="advantages-buttons-item">
-                                <button class="advantages-button button" type="button">Доставка</button>
-                            </li>
-                            <li class="advantages-buttons-item">
-                                <button class="advantages-button button" type="button">Гарантия</button>
-                            </li>
-                            <li class="advantages-buttons-item">
-                                <button class="advantages-button  advantages-button-current button" type="button">Кредит</button>
-                            </li>
-                        </ol>
                     </li>
                 </ul>
             </section>
