Добавляет реализацию стики-футера

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </nav>
         </header>
 
-        <main class="index-main">
+        <main class="main-container index-main">
             <h1 class="visually-hidden">Интернет-магазин «Девайс»</h1>
 
             <section class="slider-products">
