Добавляет сетку слайдера

--- a/index.html
+++ b/index.html
@@ -81,40 +81,44 @@
                 <h2 class="visually-hidden">Слайды с товарами</h2>
                 <ol сlass="slider-products-list">
                     <li class="slider-products-item">
-                        <h3 class="visually-hidden">Квадрокоптер</h3>
-                        <img class="slider-products-image" src="./images/main/slider-1.png" width="560" height="560" alt="Квадрокоптер">
-                        <button class="slider-button slider-prev" type="button">
-                            <span class="visually-hidden">Предыдущий слайд</span>
-                        </button>
-                        <button class="slider-button slider-next" type="button">
-                            <span class="visually-hidden">Следующий слайд</span>
-                        </button>
-                        <p class="slider-slogan">Порхает как бабочка, <br>жалит как пчела!</p>
-                        <p>Этот обычный, на первый взгляд, квадрокоптер оснащен <br>мощным лазером, замаскированным под стандартную камеру.</p>
-                        <a class="slider-product-link button" href="#">Подробнее</a>
-                        <ol class="slider-pagination">
-                            <li class="slider-pagination-item">
-                                <button class="slider-pagination-button slider-pagination-button-current" type="button">
-                                    <span class="visually-hidden">Слайд 1</span>
-                                </button>
-                            </li>
-                            <li class="slider-pagination-item">
-                                <button class="slider-pagination-button" type="button">
-                                    <span class="visually-hidden">Слайд 2</span>
-                                </button>
-                            </li>
-                            <li class="slider-pagination-item">
-                                <button class="slider-pagination-button" type="button">
-                                    <span class="visually-hidden">Слайд 3</span>
-                                </button>
-                            </li>
-                        </ol>
-                        <dl class="slider-product-characteristics">
-                            <dt class="slider-product-characteristic">Дальность полета</dt>
-                            <dd class="slider-product-value">800 м</dd>
-                            <dt class="slider-product-characteristic">Радиус поражения</dt>
-                            <dd class="slider-product-value">50 м</dd>
-                        </dl>
+                        <div class="slider-wrapper">
+                            <h3 class="visually-hidden">Квадрокоптер</h3>
+                            <img class="slider-products-image" src="./images/main/slider-1.png" width="560" height="560" alt="Квадрокоптер">
+                            <button class="slider-button slider-prev" type="button">
+                                <span class="visually-hidden">Предыдущий слайд</span>
+                            </button>
+                            <button class="slider-button slider-next" type="button">
+                                <span class="visually-hidden">Следующий слайд</span>
+                            </button>
+                        </div>
+                        <div class="slider-wrapper">
+                            <p class="slider-slogan">Порхает как бабочка, <br>жалит как пчела!</p>
+                            <p>Этот обычный, на первый взгляд, квадрокоптер оснащен <br>мощным лазером, замаскированным под стандартную камеру.</p>
+                            <a class="slider-product-link button" href="#">Подробнее</a>
+                            <ol class="slider-pagination">
+                                <li class="slider-pagination-item">
+                                    <button class="slider-pagination-button slider-pagination-button-current" type="button">
+                                        <span class="visually-hidden">Слайд 1</span>
+                                    </button>
+                                </li>
+                                <li class="slider-pagination-item">
+                                    <button class="slider-pagination-button" type="button">
+                                        <span class="visually-hidden">Слайд 2</span>
+                                    </button>
+                                </li>
+                                <li class="slider-pagination-item">
+                                    <button class="slider-pagination-button" type="button">
+                                        <span class="visually-hidden">Слайд 3</span>
+                                    </button>
+                                </li>
+                            </ol>
+                            <dl class="slider-product-characteristics">
+                                <dt class="slider-product-characteristic">Дальность полета</dt>
+                                <dd class="slider-product-value">800 м</dd>
+                                <dt class="slider-product-characteristic">Радиус поражения</dt>
+                                <dd class="slider-product-value">50 м</dd>
+                            </dl>
+                        </div>
                     </li>
                     <li class="slider-products-item slider-disabled">
                         <h3 class="visually-hidden">Смарт часы</h3>
