--- a/index.html
+++ b/index.html
@@ -121,42 +121,50 @@
                         </div>
                     </li>
                     <li class="slider-products-item slider-disabled">
-                        <h3 class="visually-hidden">Смарт часы</h3>
-                        <img class="slider-products-image" src="./images/main/slider-2.png" width="560" height="560" alt="Смарт часы">
-                        <button class="slider-button slider-prev" type="button">
-                            <span class="visually-hidden">Предыдущий слайд</span>
-                        </button>
-                        <button class="slider-button slider-next" type="button">
-                            <span class="visually-hidden">Следующий слайд</span>
-                        </button>
-                        <p class="slider-slogan">Худеем <br>правильно!</p>
-                        <p>Мотивирующие фитнес-браслеты помогут найти в себе силы <br>не пропускать занятия и соблюдать диету.</p>
-                        <a class="slider-product-link button" href="#">Подробнее</a>
-                        <dl class="slider-product-characteristics">
-                            <dt class="slider-product-characteristic">Без подзарядки</dt>
-                            <dd class="slider-product-value">48 часов</dd>
-                        </dl>
+                        <div class="slider-wrapper">
+                            <h3 class="visually-hidden">Смарт часы</h3>
+                            <img class="slider-products-image" src="./images/main/slider-2.png" width="560" height="560" alt="Смарт часы">
+                            <button class="slider-button slider-prev" type="button">
+                                <span class="visually-hidden">Предыдущий слайд</span>
+                            </button>
+                            <button class="slider-button slider-next" type="button">
+                                <span class="visually-hidden">Следующий слайд</span>
+                            </button>
+                        </div>
+                        <div class="slider-wrapper">
+                            <p class="slider-slogan">Худеем <br>правильно!</p>
+                            <p>Мотивирующие фитнес-браслеты помогут найти в себе силы <br>не пропускать занятия и соблюдать диету.</p>
+                            <a class="slider-product-link button" href="#">Подробнее</a>
+                            <dl class="slider-product-characteristics">
+                                <dt class="slider-product-characteristic">Без подзарядки</dt>
+                                <dd class="slider-product-value">48 часов</dd>
+                            </dl>
+                        </div>
                     </li>
                     <li class="slider-products-item slider-disabled">
-                        <h3 class="visually-hidden">Палка для селфи</h3>
-                        <img class="slider-products-image" src="./images/main/slider-3.png" width="560" height="560" alt="Палка для селфи">
-                        <button class="slider-button slider-prev" type="button">
-                            <span class="visually-hidden">Предыдущий слайд</span>
-                        </button>
-                        <button class="slider-button slider-next" type="button">
-                            <span class="visually-hidden">Следующий слайд</span>
-                        </button>
-                        <p class="slider-slogan">Делай селфи, <br>как Бен Стиллер!</p>
-                        <p>Самая длинная палка для селфи доступна в нашем магазине. <br>Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
-                        <a class="slider-product-link button" href="#">Подробнее</a>
-                        <dl class="slider-product-characteristics">
-                            <dt class="slider-product-characteristic">Длина палки</dt>
-                            <dd class="slider-product-value">8,5 м</b></dd>
-                            <dt class="slider-product-characteristic">Вес палки</dt>
-                            <dd class="slider-product-value">5 кг</b></dd>
-                            <dt class="slider-product-characteristic">Материал</dt>
-                            <dd class="slider-product-value">Карбон</dd>
-                        </dl>
+                        <div class="slider-wrapper">
+                            <h3 class="visually-hidden">Палка для селфи</h3>
+                            <img class="slider-products-image" src="./images/main/slider-3.png" width="560" height="560" alt="Палка для селфи">
+                            <button class="slider-button slider-prev" type="button">
+                                <span class="visually-hidden">Предыдущий слайд</span>
+                            </button>
+                            <button class="slider-button slider-next" type="button">
+                                <span class="visually-hidden">Следующий слайд</span>
+                            </button>
+                        </div>
+                        <div class="slider-wrapper">
+                            <p class="slider-slogan">Делай селфи, <br>как Бен Стиллер!</p>
+                            <p>Самая длинная палка для селфи доступна в нашем магазине. <br>Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
+                            <a class="slider-product-link button" href="#">Подробнее</a>
+                            <dl class="slider-product-characteristics">
+                                <dt class="slider-product-characteristic">Длина палки</dt>
+                                <dd class="slider-product-value">8,5 м</b></dd>
+                                <dt class="slider-product-characteristic">Вес палки</dt>
+                                <dd class="slider-product-value">5 кг</b></dd>
+                                <dt class="slider-product-characteristic">Материал</dt>
+                                <dd class="slider-product-value">Карбон</dd>
+                            </dl>
+                        </div>
                     </li>
                 </ol>
             </section>
