Добавляет внесение исправлений

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <section class="slider-products">
                 <h2 class="visually-hidden">Слайды с товарами</h2>
-                <ol сlass="slider-products-list">
+                <ol class="slider-products-list">
                     <li class="slider-products-item">
                         <div class="slider-wrapper">
                             <h3 class="visually-hidden">Квадрокоптер</h3>
